Updating attributes text contrast; fixing #39

--- a/web/concrete/css/ccm_app/panels/attributes.less
+++ b/web/concrete/css/ccm_app/panels/attributes.less
@@ -72,6 +72,7 @@ div.ccm-menu-page-attributes-search {
 					background-color: #272a2e;
 					&:hover {
 						background-color: #191b1f;
+						color: #b8bbc4;
 					}
 					&.ccm-menu-page-attribute-selected {
 						background-color: #153d71;
